Fix slider padding on IE

--- a/src/css/claiming.less
+++ b/src/css/claiming.less
@@ -262,6 +262,7 @@ form {
 
   input[type="range"] {
     height: 49px;
+    padding: 0;
     margin: 0;
   }
 }
